--- a/Resources/tungsten/email/templates/default/footer.html
+++ b/Resources/tungsten/email/templates/default/footer.html
@@ -1,6 +1,6 @@
 <div class="footer__text">
 	<p>
 		This message may contain confidential and/or privileged information. If you are not the addressee or authorized to receive this for the addressee, you must not use, copy, disclose, or take any action based on this message or any information herein. If you have received this message in error, please advise the sender immediately by reply email and delete this message. Thank you for your cooperation.<br/>
-		© 2022 Wells Fargo Bank, N.A. All rights reserved. Not intended for public distribution. For internal use only.
+		© 2024 Tungsten Designs, All rights reserved. Not intended for public distribution. For internal use only.
 	</p>
 </div>
